--- a/Cave.AssemblyVersionInfo/Cave.AssemblyVersionInfo.csproj
+++ b/Cave.AssemblyVersionInfo/Cave.AssemblyVersionInfo.csproj
@@ -10,18 +10,18 @@
     <PackageLicenseUrl>https://www.gnu.org/licenses/lgpl-3.0.en.html</PackageLicenseUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Cave.AssemblyVersionInfo.snk</AssemblyOriginatorKeyFile>
-    <Version>1.0.0-alpha-$(Configuration.ToLower())-1</Version>
+    <Version>1.0.0</Version>
     <PackageIconUrl>https://www.cavesystems.de/favicon.ico</PackageIconUrl>
     <PackageTags>CaveSystems AssemblyVersionInfo</PackageTags>
-    <PackageProjectUrl>https://github.com/Dingsd4/cave-assemblyversioninfo</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/CaveSystems/cave-assemblyversioninfo</PackageProjectUrl>
     <PackageReleaseNotes>Aktueller Release Candidate 2018</PackageReleaseNotes>
     <Description>CaveSystems AssemblyVersionInfo Bibliothek</Description>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Cave.AssemblyVersionInfo.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AssemblyVersion>1.0.0.1</AssemblyVersion>
-    <FileVersion>2018.1118.2100.2952</FileVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>2018.1212.2237.3043</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>pdbonly</DebugType>
@@ -59,13 +59,13 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'=='net20' OR '$(TargetFramework)'=='netstandard1.3'">
-    <PackageReference Include="Cave.Backports" Version="1.0.0-alpha-release-1" />
+    <PackageReference Include="Cave.Backports" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cave.Extensions" Version="1.0.0-alpha-release-1" />
-    <PackageReference Include="Cave.Platform" Version="1.0.0-alpha-release-1" />
+    <PackageReference Include="Cave.Extensions" Version="1.0.0" />
+    <PackageReference Include="Cave.Platform" Version="1.0.0" />
   </ItemGroup>
 </Project>
