--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,7 @@
 
 trigger:
 - master
+- refs/tags/*
 
 pool:
   vmImage: 'VS2017-Win2016'
@@ -15,6 +16,25 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- script: set
+  displayName: Show Variables
+
+- task: PowerShell@2
+  displayName: Set git variables
+  inputs:
+    targetType: inline
+    script: |
+      $var = "$(git tag -l --points-at HEAD)".Trim()
+      if ($var -eq '')
+      {
+        $semver = "ci-$BUILD_BUILDNUMBER"
+        Write-Host "$("##vso[task.setvariable variable=VersionSuffix]")$semver"
+        Write-Host "VersionSuffix: '$semver'"
+      }
+      $var = $(git describe --tags $(git rev-list --tags --max-count=1))
+      Write-Host "$("##vso[task.setvariable variable=VersionPrefix]")$var"
+      Write-Host "VersionPrefix: '$var'"
+
 - task: NuGetToolInstaller@0
 
 - task: NuGetCommand@2
@@ -27,7 +47,18 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
+#- task: VSTest@2
+#  inputs:
+#    platform: '$(buildPlatform)'
+#    configuration: '$(buildConfiguration)'
+
+- task: NuGetCommand@2
+  displayName: Push to nuget
+  #condition: ne(variables['GIT_TAG'], '')
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: push
+    packagesToPush: '$(Build.SourcesDirectory)/**/*.nupkg'
+    nuGetFeedType: external
+    publishFeedCredentials: 'nuget-default'
+    versioningScheme: byEnvVar
+    versionEnvVar: GIT_TAG
