--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ steps:
 
 - task: PowerShell@2
   displayName: Set git variables
+  env:
+    BUILD_BUILDNUMBER: $(Build.BuildNumber)
   inputs:
     targetType: inline
     script: |
@@ -30,6 +32,10 @@ steps:
         $semver = "ci-$BUILD_BUILDNUMBER"
         Write-Host "$("##vso[task.setvariable variable=VersionSuffix]")$semver"
         Write-Host "VersionSuffix: '$semver'"
+      }
+      else
+      {
+        Write-Host "VersionSuffix: ''"
       }
       $var = $(git describe --tags $(git rev-list --tags --max-count=1))
       if ($var -eq '')
@@ -42,10 +48,12 @@ steps:
 - task: NuGetToolInstaller@0
 
 - task: NuGetCommand@2
+  displayName: Restore nuget packages
   inputs:
     restoreSolution: '$(solution)'
 
 - task: VSBuild@1
+  displayName: Build solution
   inputs:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
@@ -57,7 +65,7 @@ steps:
 #    configuration: '$(buildConfiguration)'
 
 - task: NuGetCommand@2
-  displayName: Push to nuget
+  displayName: Push to nuget (release)
   #condition: ne(variables['GIT_TAG'], '')
   inputs:
     command: push
@@ -67,4 +75,3 @@ steps:
     versioningScheme: byEnvVar
     versionEnvVar: GIT_TAG
     includeSymbols: true
-
