--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,8 @@ steps:
       Write-Host "VersionPrefix: '$ver'"
 
 - task: NuGetToolInstaller@0
+  inputs:
+    versionSpec: '>=4.9.0'
 
 - task: NuGetCommand@2
   displayName: Restore nuget packages
