--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,25 +27,30 @@ steps:
     targetType: inline
     script: |
       $var = "$(git tag -l --points-at HEAD)".Trim()
+      $incRev = $false
       if ($var -eq '')
       {
         $semver = "ci-$env:BUILD_BUILDNUMBER".Replace('.', '-')
         Write-Host "$("##vso[task.setvariable variable=VersionSuffix]")$semver"
         Write-Host "VersionSuffix: '$semver'"
+        $incRev = $true
       }
       else
       {
         Write-Host "VersionSuffix: ''"
       }
-      $var = $(git describe --tags $(git rev-list --tags --max-count=1))
+      $var = $(git describe --tags $(git rev-list --tags --max-count=1)).Trim()
       if ($var -eq '')
       {
-        $ver = [Version]"0.0.1"
+        $ver = [Version]"1.0.0"
       }
       else
       {
         $ver = [Version]$var
-        $ver = [Version]"$($ver.Major).$($ver.Minor).$($ver.Build+1)"
+        if ($incRev -eq $true)
+        {
+          $ver = [Version]"$($ver.Major).$($ver.Minor).$($ver.Build+1)"
+        }
       }
       Write-Host "$("##vso[task.setvariable variable=VersionPrefix]")$ver"
       Write-Host "VersionPrefix: '$ver'"
@@ -66,10 +71,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-#- task: VSTest@2
-#  inputs:
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
+- task: VSTest@2
+  inputs:
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+    testAssemblyVer2: '**\Test.exe'
 
 - task: NuGetCommand@2
   displayName: Push to nuget (release)
