--- a/Cave.AssemblyVersionInfo/Cave.AssemblyVersionInfo.csproj
+++ b/Cave.AssemblyVersionInfo/Cave.AssemblyVersionInfo.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net20;net35;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net20;net35;net40;net45</TargetFrameworks>
 	<Authors>Andreas Rohleder</Authors>
     <Company>CaveSystems GmbH, Andreas Rohleder</Company>
     <Copyright>(c) 2003-$([System.DateTime]::UtcNow.Year) Andreas Rohleder</Copyright>
@@ -57,7 +57,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'=='net20' OR '$(TargetFramework)'=='netstandard1.3'">
-    <PackageReference Include="Cave.Backports" Version="1.0.3" />
+    <PackageReference Include="Cave.Backports" Version="1.0.6" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="stylecop.json" />
@@ -69,13 +69,13 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cave.Extensions" Version="1.0.5" />
-    <PackageReference Include="Cave.Platform" Version="1.0.1" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05">
+    <PackageReference Include="Cave.Extensions" Version="1.0.9" />
+    <PackageReference Include="Cave.Platform" Version="1.0.3" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.1-rc.114">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
