--- a/Cave.AssemblyVersionInfo/Cave.AssemblyVersionInfo.csproj
+++ b/Cave.AssemblyVersionInfo/Cave.AssemblyVersionInfo.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net20;net35;net40;net45</TargetFrameworks>
-	<Authors>Andreas Rohleder</Authors>
+    <Authors>Andreas Rohleder</Authors>
     <Company>CaveSystems GmbH, Andreas Rohleder</Company>
     <Copyright>(c) 2003-$([System.DateTime]::UtcNow.Year) Andreas Rohleder</Copyright>
-    <PackageIconUrl>https://www.cavesystems.de/favicon.ico</PackageIconUrl>
+    <PackageIcon>cavesystems.jpg</PackageIcon>
     <PackageLicenseExpression>LGPL-3.0-only</PackageLicenseExpression>
-	<DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <FileVersion>$([System.DateTime]::UtcNow.Year).$([System.DateTime]::UtcNow.ToString("MMdd")).$([System.DateTime]::UtcNow.ToString("HHmm")).$([System.DateTime]::UtcNow.ToString("ssfff"))</FileVersion>
-	<LangVersion>latest</LangVersion>
+    <LangVersion>latest</LangVersion>
     <!--project-->
-    <RootNamespace>Cave</RootNamespace>    
+    <RootNamespace>Cave</RootNamespace>
     <AssemblyOriginatorKeyFile>Cave.AssemblyVersionInfo.snk</AssemblyOriginatorKeyFile>
     <Product>CaveSystems AssemblyVersionInfo Library</Product>
     <PackageTags>CaveSystems AssemblyVersionInfo</PackageTags>
     <Description>CaveSystems AssemblyVersionInfo Bibliothek. This packages contains tools for appdom and assembly specific functions and versioning.</Description>
     <PackageProjectUrl>https://github.com/CaveSystems/cave-assemblyversioninfo</PackageProjectUrl>
-	<RepositoryUrl>https://github.com/CaveSystems/cave-assemblyversioninfo</RepositoryUrl>
+    <RepositoryUrl>https://github.com/CaveSystems/cave-assemblyversioninfo</RepositoryUrl>
     <!--settings-->
     <PackageReleaseNotes />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -56,11 +56,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='net20' OR '$(TargetFramework)'=='netstandard1.3'">
-    <PackageReference Include="Cave.Backports" Version="1.0.6" />
-  </ItemGroup>
   <ItemGroup>
     <None Remove="stylecop.json" />
+    <None Include="cavesystems.jpg" Pack="true" PackagePath="\"/>
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="stylecop.json" />
